# sprite_butcher

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
src/: image.cc  main.cc  packing.cc  viewer.cc
